--- a/_includes/aboutme/personalexperience/findingmypath.html
+++ b/_includes/aboutme/personalexperience/findingmypath.html
@@ -1,5 +1,11 @@
 <details id="findingmypath">
-    <summary>Finding My Path</summary> <a name="path"></a>
+    <summary>
+        <div class="header">
+            <span class="left">Finding My Path</span>
+            <span class="right"></span>
+        </div>
+    </summary>
+    <a name="path"></a>
     <p> After high school, I made the decision to dive straight into the workforce. I
         felt too immature to continue my education in college, especially considering I
         had been a very poor student in high school, graduating with a 1.7 GPA. My
