--- a/_includes/aboutme/personalexperience/music.html
+++ b/_includes/aboutme/personalexperience/music.html
@@ -1,5 +1,10 @@
 <details id="music">
-    <summary>Music</summary>
+    <summary>
+        <div class="header">
+            <span class="left">Music</span>
+            <span class="right"></span>
+        </div>
+    </summary>
     <p> When I was just 8 years old, I had a strong desire to learn guitar. So, I asked
         my parents to sign me up for guitar lessons. Naturally, they enrolling me in
         piano lessons instead. They believed it was a logical choice as I already showed
@@ -36,17 +41,15 @@
         Superdome in New Orleans, and I was honored to join him on stage, playing that
         very song. It was an unforgettable experience, etched deeply into my musical
         journey. </p>
-    <div class="soundcloudplaylist"> 
-        <iframe width="100%" height="400" scrolling="no"
-            frameborder="no" allow="autoplay"
+    <div class="soundcloudplaylist">
+        <iframe width="100%" height="400" scrolling="no" frameborder="no" allow="autoplay"
             src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1627487941&color=%23ff5500&auto_play=false&hide_related=false&show_comments=false&show_user=false&show_reposts=false&show_teaser=false&visual=false"></iframe>
         <div
             style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
             <a href="https://soundcloud.com/tom-demay" title="Tom DeMay" target="_blank"
                 style="color: #cccccc; text-decoration: none;">Tom DeMay</a> · <a
-                href="https://soundcloud.com/tom-demay/sets/featured-tracks"
-                title="Featured Tracks" target="_blank"
-                style="color: #cccccc; text-decoration: none;">Featured Tracks</a> 
+                href="https://soundcloud.com/tom-demay/sets/featured-tracks" title="Featured Tracks" target="_blank"
+                style="color: #cccccc; text-decoration: none;">Featured Tracks</a>
         </div>
     </div>
 </details>
