--- a/_includes/aboutme/personalexperience/other.html
+++ b/_includes/aboutme/personalexperience/other.html
@@ -1,6 +1,13 @@
 <details id="other">
-    <summary>Other interests: Craft Beers, Cloud Computing and Learning (not necessarily in
-        that order)</summary> 
+    <summary>
+        <div class="header">
+            <span class="left">Other Interests</span>
+            <span class="right"></span>
+        </div>
+        <div class="description">
+            Craft Beers, Cloud Computing and Learning
+        </div>
+    </summary> 
         <a name="craftbeers"></a> 
         <a name="cloudcomputing"></a> 
         <a name="learning"></a> 
