--- a/_includes/aboutme/personalexperience/sports.html
+++ b/_includes/aboutme/personalexperience/sports.html
@@ -1,6 +1,11 @@
 <details id="sports">
-    <summary>Sports and Coaching</summary> 
-    <a name="sportsandcoaching"></a> 
+    <summary>
+        <div class="header">
+            <span class="left">Sports and Coaching</span>
+            <span class="right"></span>
+        </div>
+    </summary>
+    <a name="sportsandcoaching"></a>
     <a name="coaching"></a>
     <div></div>
     <p> When I was eight years old in the mid-seventies, during the Pittsburgh Steelers'
