--- a/_includes/aboutme/professionalexperience.html
+++ b/_includes/aboutme/professionalexperience.html
@@ -1,5 +1,11 @@
 <details open id="professionalexperience">
-    <summary>Professional Experience</summary>
+    <summary>
+        <div class="header">
+            <span class="left">Professional Experience</span>
+            <span class="right"></span>
+        </div>
+
+    </summary>
     <a name="professional"></a>
     <p> With nearly 30 years of experience as a Software Engineer, I have accumulated a diverse
         range of expertise. Throughout my career, I have served in various roles, including
