--- a/_includes/aboutsite/githubpages.html
+++ b/_includes/aboutsite/githubpages.html
@@ -1,12 +1,17 @@
 <details id="githubpages">
-    <summary>GitHub Pages</summary>
+    <summary>
+        <div class="header">
+            <span class="left">GitHub Pages</span>
+            <span class="right"></span>
+        </div>
+    </summary>
     <p>
-        GitHub Pages is a free hosting service provided by GitHub that allows 
-        users to publish and host static websites directly from their GitHub repositories. 
-        It simplifies the process of deploying HTML, CSS, and JavaScript 
-        files to a publicly accessible website. My 
+        GitHub Pages is a free hosting service provided by GitHub that allows
+        users to publish and host static websites directly from their GitHub repositories.
+        It simplifies the process of deploying HTML, CSS, and JavaScript
+        files to a publicly accessible website. My
         <a href="https://github.com/tomdemay/tomdemaypro" target="_blank">GitHub Repository tomdemaypro
             <i class="fas fa-external-link-alt fa-xs"></i>
-        </a> is used to build this site. 
+        </a> is used to build this site.
     </p>
 </details>
