--- a/_includes/aboutsite/githubwebhooks.html
+++ b/_includes/aboutsite/githubwebhooks.html
@@ -1,17 +1,22 @@
 <details id="webhooks">
-    <summary>GitHub WebHooks</summary>
+    <summary>
+        <div class="header">
+            <span class="left">GitHub WebHooks</span>
+            <span class="right"></span>
+        </div>
+    </summary>
     <p>
         When I commit a change to my GitHub repository, GitHub will invoke
-        a "webhook" running on my local computer. This WebHook is essentially a 
+        a "webhook" running on my local computer. This WebHook is essentially a
         REST API. When the WebHook is called, it triggers downloading the code
         from the remote GitHub repository, starting a Jekyll server locally to regenerate my pages with
         the contact information and exports my CV and Resume to PDF files
         and uploads them to various cloud providers so they are available to me
         on my mobile devices.
         If I wanted to, I can make a change to my Professional Skills or fix a typo
-        in my Resume from my mobile device. When I commit the change my new PDFs 
+        in my Resume from my mobile device. When I commit the change my new PDFs
         with the changes are available on my phone within 50 seconds of making a change.
-        I can send it to future employers from there, or upload them to a 
-        job application site. 
+        I can send it to future employers from there, or upload them to a
+        job application site.
     </p>
 </details>
