--- a/_includes/aboutsite/goodsync.html
+++ b/_includes/aboutsite/goodsync.html
@@ -1,15 +1,20 @@
 <details id="webhooks">
-    <summary>GoodSync</summary>
+    <summary>
+        <div class="header">
+            <span class="left">GoodSync</span>
+            <span class="right"></span>
+        </div>
+    </summary>
     <p>
-        GoodSync is a free tool that will keep files in sync. When my 
-        webhook finishes creating my CV and Resume PDFs GoodSync detects the 
-        changes and then uploads my PDF to various cloud providers so I can 
+        GoodSync is a free tool that will keep files in sync. When my
+        webhook finishes creating my CV and Resume PDFs GoodSync detects the
+        changes and then uploads my PDF to various cloud providers so I can
         access these files from my mobile device.
     </p>
     <p>
-        Bottom line, I fix a typo in the code for my Resume using the 
+        Bottom line, I fix a typo in the code for my Resume using the
         GitHub mobile app and without 50 seconds I have updated PDFs for
         my CV and Resume on my mobile device through Apple iCloud, Google Drive
-        and Dropbox. 
+        and Dropbox.
     </p>
 </details>
