--- a/_includes/aboutsite/pythonflask.html
+++ b/_includes/aboutsite/pythonflask.html
@@ -1,14 +1,19 @@
 <details id="flask">
-    <summary>Python Flask</summary>
+    <summary>
+        <div class="header">
+            <span class="left">Python Flask</span>
+            <span class="right"></span>
+        </div>
+    </summary>
     <p>
-        Flask is a lightweight and flexible web framework for 
+        Flask is a lightweight and flexible web framework for
         Python that allows you to build web applications and APIs with simplicity and control
         for very small projects (not intended to be used in a production environment).
     </p>
     <p>
         I use Python Flask to host a REST WebServer on my local machine. When the REST API
-        is called, it kicks off a background task to download any changes from the 
-        remote GitHub repository to my local machine, rebuilds the pages locally and 
+        is called, it kicks off a background task to download any changes from the
+        remote GitHub repository to my local machine, rebuilds the pages locally and
         recreates my CV and Resume PDFs.
     </p>
 </details>
