--- a/_includes/aboutsite/selenium.html
+++ b/_includes/aboutsite/selenium.html
@@ -1,13 +1,19 @@
 <details id="selenium">
-    <summary>Python Selenium Module</summary>
-    <p>Selenium is an open-source framework that allows developers 
-        to automate web browsers for tasks like web testing and web scraping. It provides a 
-        programming interface for controlling browsers, simulating user interactions, 
+    <summary>
+        <div class="header">
+            <span class="left">Python Selenium Module</span>
+            <span class="right"></span>
+        </div>
+    </summary>
+    <p>Selenium is an open-source framework that allows developers
+        to automate web browsers for tasks like web testing and web scraping. It provides a
+        programming interface for controlling browsers, simulating user interactions,
         and extracting data from websites.
-    </p><p>
+    </p>
+    <p>
         Selenium is the key to putting this all together. The background task will start
-        the Jekyll server and then uses Selenium to download the generated HTML for my 
-        Resume, export it to a PDF, then checks the "Show Cover Letter" box on my site and 
+        the Jekyll server and then uses Selenium to download the generated HTML for my
+        Resume, export it to a PDF, then checks the "Show Cover Letter" box on my site and
         then exports my CV to another PDF.
     </p>
 </details>
