--- a/_includes/resume/employmenthistory/altamira.html
+++ b/_includes/resume/employmenthistory/altamira.html
@@ -1,9 +1,13 @@
 <details>
     <summary id="altamira">
-        <span class="left">Altamira Technologies Corporation</span>
-        <span class="right">McLean, Virginia</span>
-        <br>October 2023 - Present<br>
-        <i>SWEIV - Manager, Software Engineer Lead</i>
+        <div class="header">
+            <span class="left">Altamira Technologies Corporation</span>
+            <span class="right">October 2023 - Present</span>
+        </div>
+        <div class="description">
+            McLean, Virginia<br>
+            <i>SWEIV - Manager, Software Engineer Lead</i>
+        </div>
     </summary>
 
     <p>Altamira provides engineering and analytic services to the defense, intelligence, and homeland security
