--- a/_includes/resume/employmenthistory/amazon.html
+++ b/_includes/resume/employmenthistory/amazon.html
@@ -1,8 +1,13 @@
 <details>
     <summary>
-        <span class="left">Amazon AWS/EC2<br></span> <span class="right">Herndon,
-            VA</span><br> January 2020 - September 2023<br> <i>Senior
-            Software Engineer (SDE II)</i>
+        <div class="header">
+            <span class="left">Amazon AWS/EC2</span>
+            <span class="right">January 2020 - September 2023</span>
+        </div>
+        <div class="description">
+            Herndon, VA<br>
+            <i>Senior Software Engineer (SDE II)</i>
+        </div>
     </summary>
     <p>I held a senior position on the EC2 Zonal Interface Management (ZIM) team. ZIM plays a critical role in managing
         all network interfaces and IP addresses for EC2. It operates at a low level and relies on AWS technologies such
