--- a/_includes/resume/employmenthistory/demayenterprises.html
+++ b/_includes/resume/employmenthistory/demayenterprises.html
@@ -3,10 +3,14 @@
     <a name="llc"></a>
     <a name="demayenterprisesllc"></a>
     <summary>
-        <span id="demayenterprises" class="left">DeMay Enterprises, LLC</span>
-        <span class="right">Ashburn, Virginia</span><br>
-        March 2003 - March 2011<br>
-        <i>Owner</i>
+        <div class="header">
+            <span class="left">DeMay Enterprises, LLC</span>
+            <span class="right">March 2003 - March 2011</span>
+        </div>
+        <div class="description">
+            Ashburn, Virginia<br>
+            <i>Owner</i>
+        </div>
     </summary>
     <p>Created <a href="https://www.discountcasinogear.com/" target="_blank">Discount Casino Gear<i
                 class="fas fa-external-link-alt fa-xs"></i></a> as a successful side business venture. </p>
