--- a/_includes/resume/employmenthistory/emc.html
+++ b/_includes/resume/employmenthistory/emc.html
@@ -1,10 +1,13 @@
 <details>
     <summary id="EMC">
-        <span class="left">EMC</span>
-        <span class="right">Alexandria, Virginia</span><br>
-        <i>Now a subsidiary of Dell</i><br>
-        February 1997 - March 2009<br>
-        <i>Principal Software Engineer</i>
+        <div class="header">
+            <span class="left">EMC / Dell</span>
+            <span class="right">February 1997 - March 2009</span>
+        </div>
+        <div class="description">
+            Alexandria, Virginia<br>
+            <i>Principal Software Engineer</i>
+        </div>
     </summary>
     <p>Initially hired to develop internal support systems team in Visual FoxPro. I quickly transitioned to the product
         division. My contributions were recognized with the
