--- a/_includes/resume/professionalskills.html
+++ b/_includes/resume/professionalskills.html
@@ -1,5 +1,10 @@
 <details open>
-    <summary id="professionalskills" class="sectionheader">Professional Skills</summary>
+    <summary id="professionalskills">
+        <div class="header">
+            <span class="left">Professional Skills</span>
+            <span class="right"></span>
+        </div>
+    </summary>
     <ul class="skills competency-level">
         <li class="skill">
             <strong class="skill-type large proficient">Security:</strong>
