--- a/_includes/sitelayout/leftpane.html
+++ b/_includes/sitelayout/leftpane.html
@@ -1,6 +1,6 @@
 <div class="left-pane">
     <img src="assets/images/tomdemayheadshot.jpg" alt="Tom DeMay Headshot"
-        class="headshot {% if site.localhost %}local-headshot{% else %}remote-headshot{% endif %}">
+        class="headshot">
     <div class="links">
         <ul class="competency-level">
             <a href="#professionalskills"><li class="expert">C/C++</li></a>
