--- a/_includes/sitelayout/page2header.html
+++ b/_includes/sitelayout/page2header.html
@@ -1,7 +1,7 @@
 <div class="page2-header">
     <div class="table">
         <div class="cell column-one">
-            <img src="assets/images/tomdemayheadshot.jpg" alt="Tom DeMay Headshot" class="page2-headshot {% if site.localhost %}local-headshot{% else %}remote-headshot{% endif %}">
+            <!-- <img src="assets/images/tomdemayheadshot.jpg" alt="Tom DeMay Headshot" class="headshot"> -->
         </div>
         <div class="cell column-two">
             {% include sitelayout/headercontent.html %}
