--- a/_includes/resume/certifications.html
+++ b/_includes/resume/certifications.html
@@ -1,6 +1,11 @@
 <div class="no-page-break">
     <details id="certifications">
-        <summary class="sectionheader">Certifications</summary>
+        <summary>
+            <div class="header">
+                <span class="left">Certifications</span>
+                <span class="right"></span>
+            </div>
+        </summary>  
         <ul class="two-column-list">
             <li>
                 <div class="flexdiv">
