--- a/_includes/resume/hobbies.html
+++ b/_includes/resume/hobbies.html
@@ -1,7 +1,12 @@
 <div class="no-page-break">
-    <details id="hobbies"> 
+    <details id="hobbies">
         <a name="interests"></a> <a name="hobbiesandinterests"></a>
-        <summary class="sectionheader">Hobbies and Interests</summary>
+        <summary>
+            <div class="header">
+                <span class="left">Hobbies and Interests</span>
+                <span class="right"></span>
+            </div>
+        </summary>
         <ul class="hobbies-list">
             <li>Private Pilot</li>
             <li class="dark-color">◆</li>
