--- a/_includes/sitelayout/headercontent.html
+++ b/_includes/sitelayout/headercontent.html
@@ -1,10 +1,11 @@
+<img src="assets/images/tomdemayheadshot.jpg" alt="Tom DeMay Headshot" class="headshot">
 <div class="address">
     <h1>Thomas J. DeMay, II</h1>
     <h2>Principal Software Engineer</h2>
     <a href="https://www.tomdemay.pro/" target="_blank">https://www.tomdemay.pro/<i class="fas fa-external-link-alt fa-xs"></i></a><br>
-    {% if site.localhost %}
+    <!-- {% if site.localhost %} -->
     {{ "YmRwQIzC5NrQ3urmykCG3urk6FhApujK4NDK3Obe3ECsgkBkZGxqbHjE5Hx4wkDQ5MrMek7awtLY6N50yMrawvJc6N7agM7awtLYXMbe2k5A6MLkzsroek6+xNjC3NZOfMjK2sLyXOje2oDO2sLS2FzG3tp4XsJ8WEBuYGZaZHBmWm5yaGo=" | deobfuscatefilter }}
-    {% endif %}
+    <!-- {% endif %} -->
 </div>
 <div class="links">
     <div class="table">
